Fixes Task 6.7